  * modified Makefile to handle docbook-generated manpages and build-depend on
    xsltproc + docbook-xsl

  [ Joey Hess ]
  * Fix suggests on subversion.
  * Other cleanups to references to revision control programs.

  [ Joshua Kwan ]
  * debchange: Fix dch -D behavior by adding some parentheses. closes: #319687
  * Add French manual pages, thanks to the French l10n team. closes: #292780

 -- Joshua Kwan <joshk@triplehelix.org>  Sat, 23 Jul 2005 19:17:38 -0700

devscripts (2.9.2) unstable; urgency=low

  [ Julian Gilbey ]
  * debcommit: fix recognition of cvs trees

  [ Joey Hess ]
  * bts: Fix over-broad cgi url mangling to avoid mangling urls that are part
    of bug reports.
  * bts: fix retitle command, broken by extra param change in 2.9.
    Closes: #319367

 -- Joey Hess <joeyh@debian.org>  Thu, 21 Jul 2005 12:57:47 -0400

devscripts (2.9.1) unstable; urgency=low

  [ Julian Gilbey ]
  * annotate -> annotate-output renaming, removing package conflict
    (closes: #319271, #319289)
  * debcommit: Apply Colin Watson's arch patch (see #319072)

  [ Joey Hess ]
  * debchange: Fix parsing of --release-heuristic switch.

 -- Julian Gilbey <jdg@debian.org>  Thu, 21 Jul 2005 09:51:17 +0100

devscripts (2.9) unstable; urgency=low

  [ Julian Gilbey ]
  * bts: fix bts --mbox show nnnn after bts show nnnn
  * bts: add etch and etch-ignore tags (closes: #312493)
  * bts: tags: remove "fixed-in-experimental" and add "help"
  * debchange: use word "file" in manpage for --changelog option (closes:
    #301917)
  * debchange: debian/NEWS.Debian should have been debian/NEWS (closes:
    #303886)
  * debuild: correct manpage typo (closes: #309825)
  * debdiff: handle debdiff on two identically-named native .dsc files
    (closes: #307318)
  * grep-excuses: no longer cache web page, as per bug#309802 (closes:
    #225955)
  * rc-alert: no longer automatically create cache directory, as per
    bug#309802
  * uscan: handle annoying error message (closes: #303607)