@@ -13,7 +13,10 @@ devscripts (2.9.3) UNRELEASED; urgency=low
   * debchange: Fix dch -D behavior by adding some parentheses. closes: #319687
   * Add French manual pages, thanks to the French l10n team. closes: #292780
 
- -- Joshua Kwan <joshk@triplehelix.org>  Sat, 23 Jul 2005 19:17:38 -0700
+  [ Julian Gilbey ]
+  * bts: support for notfound command (closes: #320569)
+
+ -- Julian Gilbey <jdg@debian.org>  Sun, 31 Jul 2005 14:21:34 +0100
 
 devscripts (2.9.2) unstable; urgency=low
 
